4.1.1
	Document what package contains libmilter
	Fix error about stat in greylist.conf (Bob Smith)
	Add configurable dumpfile permissions
	Avoid C99 specific syntax (Greg Troxel)
	Documentation fixes
	Add SPF status selection to ACL
	Add id string to ACL
	Fix typos in documentation (Constantine A. Murenin)
4.0
	More 4.0 features examples to default greylist.conf
4.0rc2
	Fix %E and %R format substitution that sometime returned bogus results
	Report time taken by DNSRBL and urlcheck lookups (Benoit Branciard)
	Document milter timeouts, RPM generation
	Add 4.0 features examples to default greylist.conf
	Update contributor list
4.0rc1
	Accept --disable-dnsrbl without a bug
	Fix message size when multiple messages are sent in one session
	Do not build fd_pool.c if it is not used
4.0b4
	Add missing bits for Solaris 256 stream limitation workaround
	Fix build problem on Solaris
	Documentation fix (Tim Mooney)
4.0b3	
	Warn in README that bison may be required for buidling
	Fix configure error on Solaris (Tim Mooney)
	Workaround for Solaris 256 stream limitation (Johann E. Klasek)
	Fix spelling errors (Nerijus Baliunas)
	Restore build for systems like Tru64 where ld does not acccept -R
	Cleanup temporary file after DB dump failure (Johann E. Klasek)
	Handle libc that fails stdio without setting errno (Johann E. Klasek)
	Fixes the usage of the thread-proof resolver library (Johann E. Klasek)
	Do not quit on non fatal errors (Johann E. Klasek)
	Display ACL when matching whitelist ACL (Benoit Branciard)
	Add troubleshooting in README (Rogier Maas)
4.0b2
	Treat protocol errors in urlcheck clauses as temporary failures
	Report missing SPF reasons in X-Greylist (Benoit Branciard)
	Allow building objects outside of source directory (Mattheu Herrb)
	Fix configure LDFLAG generation, -R was missing (Mattheu Herrb)
	Fix MX sync on Solaris (Mattheu Herrb)
4.0b1
	Add checks against libmilter giving us NULL private structure